// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHandlerWithAuthorization should fail with a mismatch between user and authenticated one 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "errorCode": "E_UNAUTHORIZED",
  "errorHeaders": undefined,
  "errorParams": Array [
    1,
    3,
  ],
  "httpCode": 403,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with access_token disabled 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_UNAUTHORIZED",
  "errorHeaders": Object {
    "www-authenticate": "Bearer realm=\\"Auth\\"",
  },
  "errorParams": Array [],
  "httpCode": 401,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
    Array [
      "debug",
      "🔐 - No authorization found, locking access!",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with bad operation definition provided 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_MISCONFIGURATION",
  "errorHeaders": undefined,
  "errorParams": Array [
    "Bearer",
    Array [],
  ],
  "httpCode": 500,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with no authorization at all for secured endpoints 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_UNAUTHORIZED",
  "errorHeaders": Object {
    "www-authenticate": "Bearer realm=\\"Auth\\"",
  },
  "errorParams": Array [],
  "httpCode": 401,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
    Array [
      "debug",
      "🔐 - No authorization found, locking access!",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with no operation definition provided 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_OPERATION_REQUIRED",
  "errorHeaders": undefined,
  "errorParams": Array [],
  "httpCode": 500,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with not supported auth 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_UNKNOWN_AUTH_MECHANISM",
  "errorHeaders": undefined,
  "errorParams": Array [
    "Whatever yolo",
  ],
  "httpCode": 400,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail with unallowed mechanisms 1`] = `
Object {
  "authenticationChecks": Array [],
  "errorCode": "E_UNALLOWED_AUTH_MECHANISM",
  "errorHeaders": undefined,
  "errorParams": Array [
    "Basic yolo",
  ],
  "httpCode": 400,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should fail without right scopes 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "errorCode": "E_UNAUTHORIZED",
  "errorHeaders": undefined,
  "errorParams": Array [
    Array [],
    Array [
      "user",
      "admin",
    ],
  ],
  "httpCode": 403,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization should proxy authentication errors 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "errorCode": "E_UNAUTHORIZED",
  "errorHeaders": Object {
    "www-authenticate": "Bearer realm=\\"Auth\\"",
  },
  "errorParams": Array [],
  "httpCode": 401,
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
}
`;

exports[`wrapHandlerWithAuthorization with authenticated and restricted endpoints should work with access tokens and good authentication check 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
  "response": Object {
    "headers": Object {
      "X-Authenticated": "{\\"userId\\":1,\\"scopes\\":[\\"user\\",\\"admin\\"]}",
    },
    "status": 200,
  },
}
`;

exports[`wrapHandlerWithAuthorization with authenticated and restricted endpoints should work with bearer tokens and good authentication check 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
  "response": Object {
    "headers": Object {
      "X-Authenticated": "{\\"userId\\":1,\\"scopes\\":[\\"user\\",\\"admin\\"]}",
    },
    "status": 200,
  },
}
`;

exports[`wrapHandlerWithAuthorization with authenticated but not restricted endpoints should work with access tokens and good authentication check 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
  "response": Object {
    "headers": Object {
      "X-Authenticated": "{\\"userId\\":1,\\"scopes\\":[\\"user\\",\\"admin\\"]}",
    },
    "status": 200,
  },
}
`;

exports[`wrapHandlerWithAuthorization with authenticated but not restricted endpoints should work with bearer tokens and good authentication check 1`] = `
Object {
  "authenticationChecks": Array [
    Array [
      "bearer",
      Object {
        "hash": "yolo",
      },
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
  ],
  "response": Object {
    "headers": Object {
      "X-Authenticated": "{\\"userId\\":1,\\"scopes\\":[\\"user\\",\\"admin\\"]}",
    },
    "status": 200,
  },
}
`;

exports[`wrapHandlerWithAuthorization with unauthenticated endpoints should work 1`] = `
Object {
  "authenticationChecks": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "🔐 - Initializing the authentication wrapper.",
    ],
    Array [
      "debug",
      "🔓 - Public endpoint detected, letting the call pass through!",
    ],
  ],
  "response": Object {
    "status": 200,
  },
}
`;
